--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -25,10 +25,10 @@
                 <th scope="col"><p class="text-center">N Pedido</p></th>
                 <th scope="col"><p class="text-center">fecha factura</p></th>
                 <th scope="col"><p class="text-center">fecha pedido</p></th>
-                <th scope="col"><p class="text-center">nombre producto</p></th>
-                <th scope="col"><p class="text-center">Total de Productos</p></th>
-                <th scope="col"><p class="text-center">Unidades Facturadas</p></th>
-                <th scope="col"><p class="text-center">unidades de pedido</p></th>
+                <!-- <th scope="col"><p class="text-center">nombre producto</p></th> -->
+                <!-- <th scope="col"><p class="text-center">Total de Productos</p></th> -->
+                <!-- <th scope="col"><p class="text-center">Unidades Facturadas</p></th> -->
+                <!-- <th scope="col"><p class="text-center">unidades de pedido</p></th> -->
                 <th scope="col"><p class="text-center">nombre vendedor</p></th>
                 </tr>
             </thead>
@@ -41,10 +41,10 @@
                       <td><p class="text-center">{{ fact }}</p></td>
                       <td><p class="text-center">{{ facturasList[fact][0].fecha_factura }}</p></td>
                       <td><p class="text-center">{{ facturasList[fact][0].fecha_pedido }}</p></td>
-                      <td><p class="text-center">{{ facturasList[fact][0].nombre_arti }}</p></td>
-                      <td><p class="text-center">{{ facturasList[fact][0].total_producto }}</p></td>
-                      <td><p class="text-center">{{ facturasList[fact][0].unidades_facturadas }}</p></td>
-                      <td><p class="text-center">{{ facturasList[fact][0].unidades_pedido }}</p></td>
+                      <!-- <td><p class="text-center">{{ facturasList[fact][0].nombre_arti }}</p></td> -->
+                      <!-- <td><p class="text-center">{{ facturasList[fact][0].total_producto }}</p></td> -->
+                      <!-- <td><p class="text-center">{{ facturasList[fact][0].unidades_facturadas }}</p></td> -->
+                      <!-- <td><p class="text-center">{{ facturasList[fact][0].unidades_pedido }}</p></td> -->
                       <td><p class="text-center">{{ facturasList[fact][0].nombre_vendedor }}</p></td>
                   </tr>
 
