--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -26,13 +26,13 @@
           </div>
 
           <div class="alert alert-info alert-dismissible fade show" ng-show="counter >= 0" role="alert">
-            <strong>Informacion!</strong> Dispone de 10 minutos de inactividad para culminar su pedido
+            <strong>Informacion!</strong> Dispone de 10 minutos de inactividad
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="alert alert-warning alert-dismissible fade show" ng-show="counter > 300000 && counter < timeLimit" role="alert">
-            <strong>Advertencia!</strong> Dispone de menos de 5 minutos para culminar su pedido
+            <strong>Advertencia!</strong> Dispone de menos de 5 minutos de inactividad
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -58,7 +58,7 @@
 
           <form class="row col-sm-12 col-md-12 col-lg-12" >
 
-            <div class="" ng-show="tabsIndex == 0" >
+            <div class="col-sm-12 col-md-12 col-lg-12" ng-show="tabsIndex == 0" >
               <!-- INFO CLIENTE -->
               <header-client></header-client>
               <!--  END INFO CLIENTE -->
@@ -132,7 +132,7 @@
 
             </div>
 
-            <div class="" ng-show="tabsIndex == 1" >
+            <div class="col-sm-12 col-md-12 col-lg-12" ng-show="tabsIndex == 1" >
 
 
               <div class="row mt-3 mb-5" >
@@ -289,7 +289,7 @@
 
           <form class="col-sm-12 col-md-12 col-lg-12">
 
-          <div class="container" ng-show="tabsIndex == 0"  >
+          <div class="col-sm-12 col-md-12 col-lg-12" ng-show="tabsIndex == 0"  >
             <header-client></header-client>
             <div ng-show="!hasUserClient">
 
@@ -342,7 +342,7 @@
 
           </div>
 
-          <div class="container"  style="margin-top: 32px;" ng-show="tabsIndex == 1"  >
+          <div class="col-sm-12 col-md-12 col-lg-12"  style="margin-top: 32px;" ng-show="tabsIndex == 1"  >
 
               <div class="row mt-5 mb-5">
 
