--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -673,7 +673,7 @@
 
           </div> -->
           <div class="col-md-12">
-            <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem;" ng-click="initModal();" data-toggle="modal" data-target="#addPedidoModal"> <i class="fas fa-pencil"></i> CREAR PEDIDO</button>
+            <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem;" ng-click="initModal();" > <i class="fas fa-pencil"></i> CREAR PEDIDO</button>
           </div>
 
           <div class="col-md-12">
