--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -250,7 +250,7 @@
         <button type="button" class="btn btn-error" data-dismiss="modal" ng-click="reset();">Cerrar</button>
 
           <button type="button"  class="btn btn-success" ng-disabled="pedido.pedido.length < 1 || !clienteValido" >Guardar</button>
-          <button type="button"  class="btn btn-success" ng-disabled="pedido.pedido.length < 1 || !clienteValido" >Finalizar</button>
+          <button type="button"  class="btn btn-success" ng-click="finalizar_pedido()" ng-disabled="pedido.pedido.length < 1 || !clienteValido" >Finalizar</button>
 
 
       </div>
