--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -2,6 +2,74 @@
 
 </div>
 
+<div class="modal fade" id="modalFactura">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Detalle De Factura</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true"  >&times;</button>
+
+        </div>
+        <div class="modal-body">
+
+          <div class="modal-body-he">
+            <button id="btnProductInfo" style="display:none" data-toggle="modal" data-target="#modalInfoProduct"></button>
+            <div class="container">
+
+              <div class="col-sm-12 col-md-12 col-lg-12">
+
+
+                <div >
+
+                  <table datatable="ng" dt-options="dtOptionsProd"  class="table table-striped table-bordered" >
+                    <thead>
+                        <tr>
+                        <th scope="col"><p class="text-center">#</p></th>
+                        <th scope="col"><p class="text-center">Nombre articulo</p></th>
+                        <th scope="col"><p class="text-center">Unidades pedido</p></th>
+                        <th scope="col"><p class="text-center">Unidades facturadas</p></th>
+                        <th scope="col"><p class="text-center">Nombre Vendedor/p></th>
+                        <th scope="col"><p class="text-center">Email Vendedor/p></th>
+                        <th scope="col"><p class="text-center">Fecha factura</p></th>
+                        <th scope="col"><p class="text-center">Fecha pedido</p></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                      <a href="#infoProduct">
+                        <tr ng-repeat="x in factura"  >
+
+                            <td><p class="text-center">{{ $index + 1 }}</p></td>
+                            <td><p class="text-center">{{ x.nombre_arti }}</p></td>
+                            <td><p class="text-center">{{ x.unidades_pedido }}</p></td>
+                            <td><p class="text-center">{{ x.unidades_facturadas }}</p></td>
+                            <td><p class="text-right">{{  x.nombre_vendedor }}</p></td>
+                            <td><p class="text-right">{{  x.email_vendedor }}</p></td>
+                            <td><p class="text-right">{{  x.fecha_factura }}</p></td>
+                            <td><p class="text-right">{{  x.fecha_pedido }}</p></td>
+                        </tr>
+                        </a>
+
+                    </tbody>
+                    </table>
+                </div>
+
+
+            </div>
+
+            </div>
+          </div>
+
+
+        </div>
+        <div class="modal-footer">
+
+          <button type="button" class="btn btn-error" data-dismiss="modal" ng-click="closeModalProducts()" >Cerrar</button>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
 <div id="wrapper" class="active">
   <my-sidebar></my-sidebar>
   <div id="page-content-wrapper" class="container-fluid">
@@ -17,34 +85,23 @@
         <div class="col-md-12">
       <!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
       </table> -->
+      <button id="btnfacturaInfo" style="display:none" data-toggle="modal" data-target="#modalFactura"></button>
           <table datatable="ng" dt-options="dtOptions" >
             <thead>
                 <tr>
-                <!-- <th scope="col"><p class="text-center">#</p></th> -->
-                <!-- <th scope="col"><p class="text-center">Codigo de Articulo</p></th> -->
+
                 <th scope="col"><p class="text-center">N Pedido</p></th>
-                <th scope="col"><p class="text-center">fecha factura</p></th>
-                <th scope="col"><p class="text-center">fecha pedido</p></th>
-                <!-- <th scope="col"><p class="text-center">nombre producto</p></th> -->
-                <!-- <th scope="col"><p class="text-center">Total de Productos</p></th> -->
-                <!-- <th scope="col"><p class="text-center">Unidades Facturadas</p></th> -->
-                <!-- <th scope="col"><p class="text-center">unidades de pedido</p></th> -->
-                <th scope="col"><p class="text-center">nombre vendedor</p></th>
+                <th scope="col"><p class="text-center">Fecha factura</p></th>
+                <th scope="col"><p class="text-center">Fecha pedido</p></th>
+                <th scope="col"><p class="text-center">Nombre vendedor</p></th>
                 </tr>
             </thead>
-              <tbody ng-repeat="fact in facturas">
-                  <!-- <tr colspan="8">
-                    <td><p class="text-center">N Pedido {{ fact }}</p></td>
-                  </tr> -->
-                  <!-- <tr ng-repeat="x in facturasList[fact][0]"> -->
+              <tbody ng-repeat="fact in facturas" ng-click="selectFactura(facturasList[fact])" ng-class="{ selectedRow : $index == productIndex }">
+
                     <tr >
                       <td><p class="text-center">{{ fact }}</p></td>
                       <td><p class="text-center">{{ facturasList[fact][0].fecha_factura }}</p></td>
                       <td><p class="text-center">{{ facturasList[fact][0].fecha_pedido }}</p></td>
-                      <!-- <td><p class="text-center">{{ facturasList[fact][0].nombre_arti }}</p></td> -->
-                      <!-- <td><p class="text-center">{{ facturasList[fact][0].total_producto }}</p></td> -->
-                      <!-- <td><p class="text-center">{{ facturasList[fact][0].unidades_facturadas }}</p></td> -->
-                      <!-- <td><p class="text-center">{{ facturasList[fact][0].unidades_pedido }}</p></td> -->
                       <td><p class="text-center">{{ facturasList[fact][0].nombre_vendedor }}</p></td>
                   </tr>
 
