--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -21,7 +21,7 @@
 
                 <div >
 
-                  <table datatable="ng" dt-options="dtOptionsProd"  class="table table-striped table-bordered" >
+                  <table datatable="ng" dt-options="dtOptionsFact"  class="table table-striped table-bordered" >
                     <thead>
                         <tr>
                         <th scope="col"><p class="text-center">#</p></th>
