--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="modal fade" id="modalFactura">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog  mw-100 modal-90">
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title">Detalle De Factura</h4>
@@ -28,8 +28,8 @@
                         <th scope="col"><p class="text-center">Nombre articulo</p></th>
                         <th scope="col"><p class="text-center">Unidades pedido</p></th>
                         <th scope="col"><p class="text-center">Unidades facturadas</p></th>
-                        <th scope="col"><p class="text-center">Nombre Vendedor/p></th>
-                        <th scope="col"><p class="text-center">Email Vendedor/p></th>
+                        <th scope="col"><p class="text-center">Nombre Vendedor</p></th>
+                        <th scope="col"><p class="text-center">Email Vendedor</p></th>
                         <th scope="col"><p class="text-center">Fecha factura</p></th>
                         <th scope="col"><p class="text-center">Fecha pedido</p></th>
                         </tr>
