--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -86,27 +86,29 @@
       <!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
       </table> -->
       <button id="btnfacturaInfo" style="display:none" data-toggle="modal" data-target="#modalFactura"></button>
-          <table datatable="ng" dt-options="dtOptions" >
+
+          <table datatable="ng" dt-options="dtOptions"  class="table table-striped table-bordered" >
             <thead>
                 <tr>
-
-                <th scope="col"><p class="text-center">N Pedido</p></th>
-                <th scope="col"><p class="text-center">Fecha factura</p></th>
-                <th scope="col"><p class="text-center">Fecha pedido</p></th>
-                <th scope="col"><p class="text-center">Nombre vendedor</p></th>
+                  <th scope="col"><p class="text-center">N Pedido</p></th>
+                  <th scope="col"><p class="text-center">Fecha factura</p></th>
+                  <th scope="col"><p class="text-center">Fecha pedido</p></th>
+                  <th scope="col"><p class="text-center">Nombre vendedor</p></th>
                 </tr>
             </thead>
-              <tbody ng-repeat="fact in facturas" ng-click="selectFactura(facturasList[fact])" ng-class="{ selectedRow : $index == productIndex }">
+            <tbody>
+              <a href="#infoProduct">
+                <tr  ng-repeat="fact in facturas"  ng-click="selectFactura(facturasList[fact])" ng-class="{ selectedRow : $index == productIndex } >
 
-                    <tr >
-                      <td><p class="text-center">{{ fact }}</p></td>
-                      <td><p class="text-center">{{ facturasList[fact][0].fecha_factura }}</p></td>
-                      <td><p class="text-center">{{ facturasList[fact][0].fecha_pedido }}</p></td>
-                      <td><p class="text-center">{{ facturasList[fact][0].nombre_vendedor }}</p></td>
-                  </tr>
+                  <td><p class="text-center">{{ fact }}</p></td>
+                  <td><p class="text-center">{{ facturasList[fact][0].fecha_factura }}</p></td>
+                  <td><p class="text-center">{{ facturasList[fact][0].fecha_pedido }}</p></td>
+                  <td><p class="text-center">{{ facturasList[fact][0].nombre_vendedor }}</p></td>
+                </tr>
+                </a>
 
-              </tbody>
-          </table>
+            </tbody>
+            </table>
         </div>
     <!--<nav aria-label="Page navigation example" style="margin: 0 auto;">
           <ul class="pagination">
