--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -35,7 +35,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                      <a href="#infoProduct">
+
                         <tr ng-repeat="x in factura"  >
 
                             <td><p class="text-center">{{ $index + 1 }}</p></td>
@@ -47,7 +47,7 @@
                             <td><p class="text-right">{{  x.fecha_factura }}</p></td>
                             <td><p class="text-right">{{  x.fecha_pedido }}</p></td>
                         </tr>
-                        </a>
+
 
                     </tbody>
                     </table>
@@ -90,22 +90,30 @@
           <table datatable="ng" dt-options="dtOptions"  class="table table-striped table-bordered" >
             <thead>
                 <tr>
+                  <th scope="col"><p class="text-center">#</p></th>
                   <th scope="col"><p class="text-center">N Pedido</p></th>
                   <th scope="col"><p class="text-center">Fecha factura</p></th>
                   <th scope="col"><p class="text-center">Fecha pedido</p></th>
                   <th scope="col"><p class="text-center">Nombre vendedor</p></th>
+                  <th scope="col"><p class="text-center">Opciones</p></th>
                 </tr>
             </thead>
             <tbody>
-              <a href="#infoProduct">
+
                 <tr  ng-repeat="fact in facturas"  ng-click="selectFactura(facturasList[fact])" ng-class="{ selectedRow : $index == productIndex }" >
-""
+""                <td><p class="text-center">{{ $index + 1 }}</p></td>
                   <td><p class="text-center">{{ fact }}</p></td>
                   <td><p class="text-center">{{ facturasList[fact][0].fecha_factura }}</p></td>
                   <td><p class="text-center">{{ facturasList[fact][0].fecha_pedido }}</p></td>
                   <td><p class="text-center">{{ facturasList[fact][0].nombre_vendedor }}</p></td>
+                  <td>
+
+                    <i class="fa fa-eye" style="cursor: pointer;"   ng-click="selectFactura(facturasList[fact])"  data-toggle="modal" data-target="#showPedidoModal"  ></i>
+
+
+                  </td>
                 </tr>
-                </a>
+
 
             </tbody>
             </table>
