--- a/app/comps/common/footer.html
+++ b/app/comps/common/footer.html
@@ -1,4 +1,4 @@
-<div class="row" style="background:#222;color:white;font-size:12px">
+<div class="row  footer" style="background:#222;color:white;font-size:12px">
   <div class="col-md-1">
 
   </div>
