--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -101,14 +101,14 @@
             <tbody>
 
                 <tr  ng-repeat="fact in facturas"  ng-click="selectFactura(facturasList[fact])" ng-class="{ selectedRow : $index == productIndex }" >
-""                <td><p class="text-center">{{ $index + 1 }}</p></td>
+                  <td><p class="text-center">{{ $index + 1 }}</p></td>
                   <td><p class="text-center">{{ fact }}</p></td>
                   <td><p class="text-center">{{ facturasList[fact][0].fecha_factura }}</p></td>
                   <td><p class="text-center">{{ facturasList[fact][0].fecha_pedido }}</p></td>
                   <td><p class="text-center">{{ facturasList[fact][0].nombre_vendedor }}</p></td>
                   <td>
 
-                    <i class="fa fa-eye" style="cursor: pointer;"   ng-click="selectFactura(facturasList[fact])"  data-toggle="modal" data-target="#showPedidoModal"  ></i>
+                    <i class="fa fa-eye" style="cursor: pointer;"   ng-click="selectFactura(facturasList[fact])"  data-toggle="modal" data-target="#modalFactura"  ></i>
 
 
                   </td>
