--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -250,7 +250,7 @@
       </div>
       <div class="modal-footer" style="display: block;margin: 0 auto;">
         <button type="button" class="btn btn-error" data-dismiss="modal" ng-show="ID == null" ng-click="reset()">Cerrar</button>
-          <button type="button"  class="btn btn-success" data-dismiss="modal" ng-click="finalizar_pedido();stop();" ng-show="ID != null" ng-disabled="pedido.pedido.length < 1 || !clienteValido" >Finalizar</button>
+        <button type="button"  class="btn btn-success" data-dismiss="modal" ng-click="finalizar_pedido();stop();" ng-show="ID != null" ng-disabled="pedido.pedido.length < 1 || !clienteValido" >Finalizar</button>
 
 
       </div>
@@ -453,8 +453,8 @@
       </div>
       <div class="modal-footer" style="display: block;margin: 0 auto;">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="reset();">Cerrar</button>
-        <button type="button"  class="btn btn-primary" ng-show="!editView && pedido.ESTATUS < 2"   ng-disabled="!clienteValido"  ng-click="editPedido();">Editar</button>
-        <button type="button"  class="btn btn-success" ng-show="pedido.ESTATUS < 2"  ng-disabled="pedido.pedido.length < 1 || !clienteValido" >Finalizar</button>
+        <button type="button"  class="btn btn-primary" ng-show="!editView && pedido.ESTATUS < 3"   ng-disabled="!clienteValido"  ng-click="editPedido();">Editar</button>
+        <button type="button"  class="btn btn-success" ng-show="pedido.ESTATUS < 2"  ng-disabled="pedido.pedido.length < 1 || !clienteValido"  ng-click="finalizar_pedido();stop();" >Finalizar</button>
         <!-- <button type="button"  class="btn btn-success" ng-disabled="pedido.pedido.length < 1" ng-show="editView" ng-click="updPedido();">Actualizar pedido</button> -->
       </div>
     </div>
