--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -273,7 +273,7 @@
         <div class="card-header">
           Fecha:
           <strong>{{pedido.fecha}}</strong>
-          <span class="float-right"> <strong>tiempo:</strong> {{msToTime(counter)}}</span>
+          <span class="float-right ml-3" ng-show="editView" > <strong>tiempo:</strong> {{msToTime(counter)}}</span>
           <span class="float-right"> <strong>Estatus:</strong> {{pedido.estatus}}</span>
           </div>
           <div class="alert alert-danger"  ng-show="!clienteValido && !hasUserClient" role="alert">
@@ -479,7 +479,7 @@
       </div>
       <div class="modal-footer" style="display: block;margin: 0 auto;">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="reset();">Cerrar</button>
-        <button type="button"  class="btn btn-primary" ng-show="!editView && pedido.ESTATUS < 3"   ng-disabled="!clienteValido"  ng-click="editPedido();">Editar</button>
+        <button type="button"  class="btn btn-primary" ng-show="!editView && pedido.estatus_id < 3"   ng-disabled="!clienteValido"  ng-click="editPedido();">Editar</button>
         <button type="button"  class="btn btn-success" ng-show="pedido.ESTATUS < 2"  ng-disabled="pedido.pedido.length < 1 || !clienteValido"  ng-click="finalizar_pedido();stop();" >Finalizar</button>
         <!-- <button type="button"  class="btn btn-success" ng-disabled="pedido.pedido.length < 1" ng-show="editView" ng-click="updPedido();">Actualizar pedido</button> -->
       </div>
