--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -644,7 +644,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-        <button type="button" ng-disabled="productIndex==-1" class="btn btn-success" data-dismiss="modal" data ng-click="addArtPedido();">Agregar</button>
+        <button type="button" ng-disabled="productIndex==-1" class="btn btn-success" data-dismiss="modal"  ng-click="addArtPedido();">Agregar</button>
       </div>
     </div>
   </div>
