--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -702,7 +702,7 @@
   			<!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
         </table> -->
 
-        <table class="table" datatable="ng" dt-options="dtOptions">
+        <table class="table" ng-if="2==1" datatable="ng" dt-options="dtOptions">
           <thead>
               <tr>
               <th scope="col"><p class="text-center">#</p></th>
@@ -745,6 +745,42 @@
                 </tr>
           </tbody>
           </table>
+
+          <table class="table" datatable="ng" dt-options="dtOptions">
+            <thead>
+                <tr>
+                <th scope="col"><p class="text-center">#</p></th>
+                <th scope="col"><p class="text-center">Fecha creacion</p></th>
+                <th  scope="col"><p class="text-center">Nombre Cliente</p></th>
+                <th scope="col"><p class="text-center">Direcion</p></th>
+                <th scope="col"><p class="text-center">Estatus</p></th>
+                <th scope="col"><p class="text-center">Fecha actualizado</p></th>
+                </tr>
+            </thead>
+            <tbody>
+
+                <tr ng-repeat="x in listaPedidosV2">
+                    <th scope="row">{{ $index + 1 }}</th>
+                    <td><p class="text-center">{{  x.fecha_creacion }}</p></td>
+                    <td ng-show="!hasUserClient" ><p class="text-center">{{ x.nombre_cliente }}</p></td>
+                    <td><p class="text-center">{{ x.direccion_cliente }}</p></td>
+                    <td><p class="text-center">{{ x.estatus }}</p></td>
+                    <td><p class="text-center">{{ x.fecha_estatus }}</p></td>
+                    <td>
+                      <!-- <button type="button" class="btn btn-danger" ng-click="removeDetalleProducto($index);">X</button> -->
+
+                      <!-- <button type="button" class="btn btn-danger" ></button> -->
+                      <i class="fa fa-trash" style="cursor: pointer;" ng-show="x.estatus_id < 3" data-toggle="modal" data-target="#modalConfirm" ng-click="confirmModal(x.ID);"  ></i>
+
+
+                      <!-- <button type="button" class="btn btn-default"  ></button> -->
+                      <i class="fa fa-eye" style="cursor: pointer;"  ng-click="getPedido(x.ID);" data-toggle="modal" data-target="#showPedidoModal"  ></i>
+
+
+                    </td>
+                  </tr>
+            </tbody>
+            </table>
           </div>
         </div>
 
