--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -755,6 +755,7 @@
                 <th scope="col"><p class="text-center">Direcion</p></th>
                 <th scope="col"><p class="text-center">Estatus</p></th>
                 <th scope="col"><p class="text-center">Fecha actualizado</p></th>
+                <th scope="col"><p class="text-center">Opciones</p></th>
                 </tr>
             </thead>
             <tbody>
@@ -770,7 +771,7 @@
                       <!-- <button type="button" class="btn btn-danger" ng-click="removeDetalleProducto($index);">X</button> -->
 
                       <!-- <button type="button" class="btn btn-danger" ></button> -->
-                      <i class="fa fa-trash" style="cursor: pointer;" ng-show="x.estatus_id < 3" data-toggle="modal" data-target="#modalConfirm" ng-click="confirmModal(x.ID);"  ></i>
+                      <i class="fa fa-trash" style="cursor: pointer;" ng-show="x.estatus < 3" data-toggle="modal" data-target="#modalConfirm" ng-click="confirmModal(x.ID);"  ></i>
 
 
                       <!-- <button type="button" class="btn btn-default"  ></button> -->
