--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -751,7 +751,7 @@
                 <tr>
                 <th scope="col"><p class="text-center">#</p></th>
                 <th scope="col"><p class="text-center">Fecha creacion</p></th>
-                <th  scope="col"><p class="text-center">Nombre Cliente</p></th>
+                <th  ng-show="!hasUserClient" scope="col"><p class="text-center">Nombre Cliente</p></th>
                 <th scope="col"><p class="text-center">Direcion</p></th>
                 <th scope="col"><p class="text-center">Estatus</p></th>
                 <th scope="col"><p class="text-center">Fecha actualizado</p></th>
